# tumekulator

./: .gitignore  Pipfile  README.rst  pyproject.toml  requirements.txt
data/: bank_transactions.csv  transactions_fy_2014--2015.csv  transactions_fy_2015--2016.csv
ipynb/: finances.ipynb  prototyping.ipynb  raffle_tickets.ipynb  roster.ipynb  roster_201607.md  roster_201608.md  roster_201610.md  roster_201611.md  roster_201612.md  rosters.ipynb
ipynb/.ipynb_checkpoints/: finances-checkpoint.ipynb  prototyping-checkpoint.ipynb  roster-checkpoint.ipynb
notebooks/.ipynb_checkpoints/: rosters-checkpoint.ipynb
output/: raffle_tickets.html  roster_201609.md
