[tool.poetry]
name = "tumekulator"
version = "1.0.0"
description = "Some tools for Tumeke Cycle Space"
authors = ["Alex Raichev <alex@raichev.net>"]

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^0.24.0"
jupyter = "^1.0"
python-highcharts = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
