[tool.poetry]
name = "tumekulator"
version = "1.0.0"
description = "Some tools for Tumeke Cycle Space"
authors = ["Alex Raichev <alex@raichev.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "<2"
jupyter = "<2"
python-highcharts = "<1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
